[gd_scene load_steps=7 format=2]

[ext_resource path="res://BaseManager.gd" type="Script" id=1]
[ext_resource path="res://MainWorld.gd" type="Script" id=2]
[ext_resource path="res://objects/planets/tilesets/planetTileset.tres" type="TileSet" id=3]
[ext_resource path="res://effects/DayNightCycle.tscn" type="PackedScene" id=4]
[ext_resource path="res://EventManager.gd" type="Script" id=5]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 800, 800, 1 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 215.69
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="MainWorld" type="Node2D"]
script = ExtResource( 2 )

[node name="DayNightCycle" parent="." instance=ExtResource( 4 )]
position = Vector2( -192, 96 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="TileMap" type="TileMap" parent="Navigation2D"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
format = 1

[node name="EventManager" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParticleFX" type="Control" parent="EventManager"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Rain_Particles" type="Particles2D" parent="EventManager/ParticleFX"]
emitting = false
amount = 1000
local_coords = false
process_material = SubResource( 1 )

[node name="BaseManager" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
